<resources>
    <string name="app_name">FragmentNavigationApp</string><!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="result">Result</string>
    <string name="test">Test</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_example_com">johndoe@example.com</string>
    <string name="mahamkhalid">Maham Khalid</string>
    <string name="bsef20a540_example_com">bsef20a540@pucit.edu.com</string>
    <string name="todo">TODO</string>
    <string name="results">Results</string>
    <string name="sky_letter">Sky Letter</string>
    <string name="root_letter">Root Letter</string>
    <string name="grass_letter">Grass Letter</string>
    <string name="right_or_wrong">Right or Wrong</string>
    <string name="app_Name">My Application</string>
</resources>