

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:ignore="ExtraText">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile_image"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mahamkhalid"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsef20a540_example_com"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:gravity="center" />

</LinearLayout>
