<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/letter_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="162dp"
        android:gravity="center"
        android:text="Hello World!"
        android:textSize="72sp"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="258dp" />

    <Button
        android:id="@+id/sky_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/letter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sky_letter"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/root_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sky_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/root_letter"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/grass_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/root_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grass_letter"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="517dp" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/right_or_wrong"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grass_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
